# thunderboltSH

./: .gitignore  PHASE_TEST_PLAN.md  REQUIREMENT.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.js  App.tsx  index.css  types.d.ts  types.ts
src-tauri/: Cargo.toml  build.rs  mac-info.plist  openbolt.entitlements  tauri.conf.json  windows-manifest.xml
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  clipboard.rs  commands.rs  error.rs  lib.rs  main.rs  screen_share.rs  sync_engine.rs
src-tauri/src/file_api/: mod.rs  routes.rs
src-tauri/src/kvm/: mod.rs
src-tauri/src/network/: ip_config.rs  mdns.rs  mod.rs  nic.rs
