[package]
name = "openbolt"
version = "0.1.0"
description = "OpenBolt cross-platform Thunderbolt collaboration"
authors = ["OpenBolt Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "openbolt_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
winres = "0.1"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
mdns-sd = "0.11"
notify = "6"
globset = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "fs", "io-util", "net", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
urlencoding = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_UI_Shell",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
